--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -24,7 +24,7 @@
     <div class="container-fluid" id="login">
         <center>
             <div class="login-block" style="width: 450px;">
-                <form action='/base.html' id='myform' onsubmit="return func()">
+                <form action='./base.html' id='myform' onsubmit="return func()">
                     <fieldset>
                         <legend>
                             <h1> <b> Sign-in</b></h1>
@@ -37,7 +37,7 @@
                                 <td id='c'><input type='password' placeholder="Password" id='password' required>
                             </tr>
                             <tr>
-                                <td id="c"><button class="button clip-path" value='submit' id='c' formaction="base.html"><b>submit</b></button></td>
+                                <td id="c"><button class="button clip-path" value='submit' id='c' formaction="./base.html"><b>submit</b></button></td>
                             </tr>
                             <tr>
                                 <td id="e"> <a href="#" id='e'>Click here to registor→</a></td>
