--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -46,7 +46,7 @@
                         </button>
                     </li>
                     <li>
-                        <a href="login.html" class="dropdown-item">
+                        <a href="./login.html" class="dropdown-item">
                             <i class="glyphicon glyphicon-log-out"></i>
                             <span>Logout</span>
                         </a>
@@ -129,7 +129,7 @@
         <div>
             <div class="sidebar" id="sb">
                 <div class="sidebarcategories">
-                    <a href="base.html">
+                    <a href="./base.html">
                         <div class="sidebarcategory">
                             <i class="glyphicon glyphicon-user"></i>
                             <span>Profile</span>
@@ -137,7 +137,7 @@
                     </a>
                 </div>
                 <div class="sidebarcategories">
-                    <a href="solo.html">
+                    <a href="./solo.html">
                         <div class="sidebarcategory">
                             <i class="glyphicon glyphicon-king"></i>
                             <span>Single-player</span>
@@ -153,7 +153,7 @@
                     </a>
                 </div>
                 <div class="sidebarcategories">
-                    <a href="rules.html">
+                    <a href="./rules.html">
                         <div class="sidebarcategory">
                             <i class="glyphicon glyphicon-tasks"></i>
                             <span>Game Rules</span>
