--- a/src/templates/solo.html
+++ b/src/templates/solo.html
@@ -117,11 +117,10 @@
                                 </table>
                             </div>
                         </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" value="submit" data-dismiss="modal">Save</button>
+                        </div>
                     </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>
                 </div>
             </div>
 
@@ -141,7 +140,7 @@
                     </a>
                 </div>
                 <div class="sidebarcategories">
-                    <a href="./solo.html">
+                    <a href="./solo-start.html">
                         <div class="sidebarcategory">
                             <i class="glyphicon glyphicon-king"></i>
                             <span>Single-Player</span>
