--- a/src/templates1/css/sign-in.css
+++ b/src/templates1/css/sign-in.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
     background-image: url(../static/background.jpg);
     background-position: center;
-    background-size: contain;
+    background-size: cover;
 }
 
 .main {
